menu pronto e audio do jogo adicionado

--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_game.css">
     <link rel="stylesheet" href="style_menu.css">
-    <script  src="JogoDaVelha.js"></script>
+    <script src="JogoDaVelha.js"></script>
     <script type="module" src="menu.js"></script>
     <title>Jogo da Velha</title>
 </head>
     <body>
+        <audio id="audio_click" src="movendo peça xadrez.mp3"></audio>
+        <audio id="som_vitoria" src="som vitoria.mp3"></audio>
 
         <nav id="navegação_menu">
             <div id="caixa_icone_menu">
-                <div id="barra1"></div>
-                <div id="barra2"></div>
-                <div id="barra3"></div>
+                <div class="barras" id="barra1"></div>
+                <div class="barras" id="barra2"></div>
+                <div class="barras" id="barra3"></div>
             </div>
             <ul id="lista_menu">
-                <li id="multplayer">Multplayer</li>
-                <li id="singleplayer">Singleplayer</li>
-                <li id="tema">Tema escuro</li>
+                <li class="opcoes_menu" id="singleplayer">1 jogador</li>
+                <li class="opcoes_menu" id="multplayer">2 jogadores</li>
+                <li class="opcoes_menu" id="tema">Tema Escuro</li>
             </ul>
         </nav>
 
