modificado para web app

--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_game.css">
     <link rel="stylesheet" href="style_menu.css">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="manifest" href="manifest.json">
+
     <script src="JogoDaVelha.js"></script>
-    <script type="module" src="menu.js"></script>
+    <script type="module" src="Menu.js"></script>
     <title>Jogo da Velha</title>
 </head>
     <body>
-        <audio id="audio_click" src="movendo peça xadrez.mp3"></audio>
-        <audio id="som_vitoria" src="som vitoria.mp3"></audio>
+        <audio id="audio_click" src="movendo_peça_xadrez.mp3"></audio>
+        <audio id="som_vitoria" src="som_vitoria.mp3"></audio>
 
         <nav id="navegação_menu">
             <div id="caixa_icone_menu">
