--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="manifest.json">
 
     <script src="JogoDaVelha.js"></script>
-    <script type="module" src="Menu.js"></script>
+    <!-- <script type="module" src="Menu.js"></script> -->
     <title>Jogo da Velha</title>
 </head>
     <body>
